# vm-perf

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  TODO.md  ex.rs  fib.js  fib.py  report.py  threadvis.py
benches/: fib.rs  fixtures.rs
report/: index.html
results/: index.html
results/x86_64/: goto.S  switch.S  tail.S
src/: dispatch.rs  lib.rs  main.rs  nanbox.rs  op.rs  seed.txt  thread.rs  util.rs  vm.rs
src/dispatch/: goto.rs  switch.rs  tail.rs
src/vm/: reg.rs  rega.rs
