[package]
name = "vm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paste = "1.0.12"

[profile.release]
debug = true
lto = "fat"

[profile.bench]
debug = true
lto = "fat"

[dev-dependencies]
criterion = "0.5.1"


[[bench]]
name = "fib"
harness = false
